build(package): ➖ ensure the @playform/compress is the problem

--- a/src/content/docs/advanced/optimize.mdx
+++ b/src/content/docs/advanced/optimize.mdx
@@ -11,7 +11,7 @@ import { Aside } from 'astro-pure/user'
 This theme has integrated with:
 
 - `sharp`: image optimization
-- [`@playform/compress`](/docs/integrations/others#playformcompress): HTML, CSS, JS, images minify
+- [`@playform/compress`](/docs/integrations/others#playformcompress): HTML, CSS, JS, images minify (has problems for a while; see [GitHub Issue #55](https://github.com/cworld1/astro-theme-pure/issues/55))
 
 ## CDN
 
