--- a/src/content/docs/advanced/update.mdx
+++ b/src/content/docs/advanced/update.mdx
@@ -13,6 +13,15 @@ import { Aside } from 'astro-pure/user'
 
 ## Breaking Changes
 
+### v4.1.0
+
+- Moved custom css file `global.css` to `src/assets/styles/global.css`.
+- Changed the font loader to [Astro built-in font loader](https://docs.astro.build/en/reference/experimental-flags/fonts/).
+
+### v4.0.9
+
+- Support caching links avatar (Arthals)
+
 ### v4.0.8
 
 No breaking changes.
