--- a/src/content/docs/setup/deployment.mdx
+++ b/src/content/docs/setup/deployment.mdx
@@ -38,7 +38,7 @@ This theme supports Vercel by default:
 
 And vercel also support static method:
 
-```ts title="astro.config.mjs"
+```ts title="astro.config.ts"
 import vercelServerless from '@astrojs/vercel/serverless' // [!code --]
 import vercelStatic from '@astrojs/vercel/static'; // [!code ++]
 
