style: :art: small changes for code

--- a/src/content/docs/advanced/optimize.mdx
+++ b/src/content/docs/advanced/optimize.mdx
@@ -102,7 +102,7 @@ A easy way is using online tools like [TinyPNG](https://tinypng.com/) to manuall
 
 If you are using external images, excepting the lazy-load tag, you can also add [Astro pre-optimize service](https://docs.astro.build/en/guides/images/#authorizing-remote-images) for it. This will change external images to local optimized ones.
 
-```js title="astro.config.mjs"
+```js title="astro.config.ts"
 export default defineConfig({
   // ...
   image: {
