--- a/src/content/docs/advanced/update.mdx
+++ b/src/content/docs/advanced/update.mdx
@@ -13,6 +13,13 @@ import { Aside } from 'astro-pure/user'
 
 ## Breaking Changes
 
+### v4.1.1
+
+- Move shiki custom transformers to `src/plugins/shiki-custom-transformers.ts`.
+- Move shiki official transformers to `src/plugins/shiki-offical/transformers.ts`.
+- Improve config file with new order and comments. This will affect both `src/site.config.ts` and `astro.config.ts` ([09dc44d](https://github.com/cworld1/astro-theme-pure/commit/09dc44d87987f5f777b21ea642ef8cc9db11e592)).
+- Add collapse code function with default ([7281077](https://github.com/cworld1/astro-theme-pure/commit/7281077b31b7f1bb61bf6eb9a865aae8835cf0e3), [22b8847](https://github.com/cworld1/astro-theme-pure/commit/22b884789724c1127c7b5a5d1639fd5b0e6a8201))
+
 ### v4.1.0
 
 - Moved custom css file `global.css` to `src/assets/styles/global.css`.
