docs(docs): :memo: update breaking changes

--- a/src/content/docs/advanced/update.mdx
+++ b/src/content/docs/advanced/update.mdx
@@ -19,6 +19,7 @@ import { Aside } from 'astro-pure/user'
 - Move shiki official transformers to `src/plugins/shiki-offical/transformers.ts`.
 - Improve config file with new order and comments. This will affect both `src/site.config.ts` and `astro.config.ts` ([09dc44d](https://github.com/cworld1/astro-theme-pure/commit/09dc44d87987f5f777b21ea642ef8cc9db11e592)).
 - Add collapse code function with default ([7281077](https://github.com/cworld1/astro-theme-pure/commit/7281077b31b7f1bb61bf6eb9a865aae8835cf0e3), [22b8847](https://github.com/cworld1/astro-theme-pure/commit/22b884789724c1127c7b5a5d1639fd5b0e6a8201))
+- Refactor palette and border radius styles. If you use color like `--primary-foreground`, update it to `--card`.
 
 ### v4.1.0
 
