docs(kitchen): 内容修正

--- a/src/content/kitchen/common/蚝油杏鲍菇.mdx
+++ b/src/content/kitchen/common/蚝油杏鲍菇.mdx
@@ -27,7 +27,7 @@ import { Aside, Steps } from 'astro-pure/user'
 
 <Aside type='tip'>
 
-正常吃饭用的勺子就好，蚝油跟生抽尽量保持差不多的比例，过多味道可能会比较咸，做一次就知道了
+正常吃饭用的勺子就好，蚝油跟生抽尽量保持差不多的比例(2:1)，过多味道可能会比较咸，做一次就知道了
 
 </Aside>
 
@@ -37,7 +37,7 @@ import { Aside, Steps } from 'astro-pure/user'
 
 1. **准备好食材**​
 
-   葱姜切片，随便切切就行
+   姜蒜切片，随便切切就行
 
    线椒，小米椒，小香葱切丁
 
