docs: change new post doc to new command `bun pure new`

--- a/src/content/docs/setup/content.mdx
+++ b/src/content/docs/setup/content.mdx
@@ -75,7 +75,7 @@ I like writing simple articles.
 ```
 
 <Aside type='tip'>
-This theme has a quick script to create a new article for you. Just run `bun new <post-slug>` in your terminal.
+This theme has a quick script to create a new article for you. Just run `bun pure new <post-slug>` in your terminal.
 </Aside>
 
 ### MDX Authoring
