--- a/src/content/docs/advanced/update.mdx
+++ b/src/content/docs/advanced/update.mdx
@@ -13,6 +13,10 @@ import { Aside } from 'astro-pure/user'
 
 ## Breaking Changes
 
+### v4.1.2
+
+- Move `src/pages/terms/list.astro` to `src/pages/terms/index.astro`. 
+
 ### v4.1.1
 
 - Move shiki custom transformers to `src/plugins/shiki-custom-transformers.ts`.
