fix: adjust amount display in sponsors; update links in documentation

--- a/src/content/docs/advanced/update.mdx
+++ b/src/content/docs/advanced/update.mdx
@@ -182,7 +182,7 @@ No breaking changes.
   ```
 
 - Move `Substats` config to related page `src/pages/about/index.astro`.
-- Changed Github Card component to `GithubCard` in `src/components/advanced`. See [Advanced Components #Github Card](http://localhost:4321/docs/integrations/advanced#github-card) for usage.
+- Changed Github Card component to `GithubCard` in `src/components/advanced`. See [Advanced Components #Github Card](/docs/integrations/advanced#github-card) for usage.
 - Move Links Logbook to `src/site.config.ts`. See [Friend Links #Basic Configurations](/docs/integrations/links#basic-configurations).
 
 ### v3.1.3
